--- a/.gitignore
+++ b/.gitignore
@@ -72,5 +72,8 @@ InitTestScene*.unity
 
 # Dossier Personnel (ne pas référencer des assets unity de ce dossier dans le projet - gitignore)
 /[Aa]ssets/Personnel
+/[Aa]ssets/Personnel.meta
+/[Aa]ssets/[Ww][Ii][Pp]
+/[Aa]ssets/[Ww][Ii][Pp].meta
 
 # End of https://www.toptal.com/developers/gitignore/api/unity
