Wolf hitbox fix attempt

--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,4 @@ InitTestScene*.unity
 /[Aa]ssets/[Ww][Ii][Pp].meta
 
 # End of https://www.toptal.com/developers/gitignore/api/unity
+fmod_editor.log
